# linux64-code-injection

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  launcher.py  main.c  procutils.c  procutils.h  shellcode.asm  shellcode.c  utils.c  utils.h  xmake.lua
misc/multithreaded_test_so/: main.c
misc/test_process/: main.c  test_process
misc/test_so/: test_so.c
src/: ejection_shellcode.asm  injection_shellcode.asm  injector.rs  main.c  main.rs  proc_maps.rs  procutils.c  procutils.h  readelf_dynsym.rs  shellcode.asm  shellcode.h  shellcodes.c  shellcodes.h  shellcodes.rs  utils.c
src/command/: cli.rs  mod.rs  tui.rs
