[package]
name = "linux64-code-injection"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.8", features = ["derive"] }
elf = "0.7.4"
iced-x86 = { version = "1.21.0", features = ["code_asm"] }
lazy_static = "1.5.0"
nix = { version = "0.29.0", features = ["process", "ptrace"] }
regex = "1.10.5"
